# todo-mcp

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  todo_mcp.py
.github/workflows/: build-container.yml
src/todo_mcp/: __init__.py  graph_client.py  schema.py  server.py
