[project]
name = "todo-mcp"
version = "2.0.0"
description = "MCP server for Microsoft Todo"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pymstodo>=0.2.1",
    "requests-oauthlib>=1.3.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
todo-mcp = "todo_mcp:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
